--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 class="interior-div-heading">Home</h2>
             <div>
                 <h3 class="interior-div-subheading">About Me</h3>
-                <hr class="div-line">
+                <hr class="div-line1">
                 <p class="div-para-class">I always try to enhance my technical skills through continuous process of learning new algorithms and technologies. 
                    I have constantly performed well in academics and have experience in team work. 
                    I feel certain that my skills and abilities will be valuable in achieving organization’s goals.
