--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
                     on Movielens 100k dataset to recommend most rated movies to viewers.
                 </p>
                 <p class="div-para-class">Link: <a class="div-para-anchor" href="https://github.com/ashhadimam07/Movie-Recommendation-System" target="_blank">
-                    Movie-Recommendation-System</a>
+                    github.com/ashhadimam07/Movie-Recommendation-System</a>
                 </p>
             </div>
             <div>
@@ -42,7 +42,7 @@
                     and applied the Naive Bayes algorithm to predict that the reviews are positive or negative.
                 </p>
                 <p class="div-para-class">Link: <a class="div-para-anchor" href="https://github.com/ashhadimam07/Sentimental-Analysis-of-Hackathon" target="_blank">
-                    Sentimental-Analysis-of-Hackathon</a>
+                    github.com/ashhadimam07/Sentimental-Analysis-of-Hackathon</a>
                 </p>
             </div>
         </div>
