--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                    I have constantly performed well in academics and have experience in team work. 
                    I feel certain that my skills and abilities will be valuable in achieving organization’s goals.
                 </p>
-                <p class="div-para-class">Post-Graduated(M.Tech) in Computer Science from BIT-Mesra.</p>
+                <p class="div-para-class">Post-Graduate(M.Tech) in Computer Science from BIT-Mesra.</p>
             </div>
         </div>
     </div>
